--- a/server/src/html/GradientBoostingPage.html
+++ b/server/src/html/GradientBoostingPage.html
@@ -1,4 +1,3 @@
-# templates/registration.html
 {% extends "bootstrap/base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
@@ -8,6 +7,6 @@
     {{ wtf.quick_form(form) }}
   <hr>
   <p>Enter GradientBoosting parameters</p>
-  <p><a href={{url_for('goto_RF_page')}}>Create RF instead</a></p>
+  <p><a href={{url_for('goto_RF_page')}}>Create RF model instead</a></p>
 </div>
 {% endblock %}
