--- a/server/src/html/main_page.html
+++ b/server/src/html/main_page.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <center><h2>Choose mode</h2></center>
+    <center><h1>Choose mode</h1></center>
     <p>
-        <a href="{{ url_for('goto_GB_page') }}">Train Gradient Boosting model</a>
+        <h4><a href="{{ url_for('goto_GB_page') }}">Train Gradient Boosting model</a></h4>
     </p>
     <p>
-        <a href="{{ url_for('goto_RF_page') }}">Train Random Forest model</a>
+        <h4><a href="{{ url_for('goto_RF_page') }}">Train Random Forest model</a></h4>
     </p>
     <p>
-        <a href="{{ url_for('goto_models_page') }}">Use pretrained models</a>
+        <h4><a href="{{ url_for('goto_models_page') }}">Use pretrained models</a></h4>
     </p>
 </head>
 <body>
