--- a/server/src/html/train_plot.html
+++ b/server/src/html/train_plot.html
@@ -10,8 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-3">
-            <h2><<center><label> MSE of algo after each iteration.</label></center></h2>
-
+            <h2><center><label> MSE of algo after each iteration.</label></center></h2>
         </div>
         <div class="col-md-6">
             <div class="chart" id="bargraph">
